gcc/testsuite/rust/rustc/ui/issues/issue-14721.rs
fn main() {
    let foo = "str";
    println!("{}", foo.desc); // { dg-error ".E0609." "" { target *-*-* } }
}

